fix: resolve the scrollbar appearing when opening the rows number dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #f3f4f6; 
+}
